<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="340dp"
        android:layout_height="340dp"
        android:contentDescription="@string/background_image_description"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignInPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_in_prompt"
        android:textColor="#757575"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack" />

    <!-- Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/AppTheme.TextInputLayout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/mail"
        app:layout_constraintTop_toBottomOf="@id/tvSignInPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/AppTheme.TextInputLayout"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/lock"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/tilEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        android:textColor="#6200EE"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintTop_toBottomOf="@id/cbRememberMe" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        style="@style/AppTheme.Button"
        android:text="@string/next2"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <TextView
        android:id="@+id/tvRegisterNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_member_register"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>